// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FilterPopover component does not show item list when loading 1`] = `
<EuiPopover
  anchorPosition="downCenter"
  button={
    <UptimeFilterButton
      isSelected={true}
      numActiveFilters={2}
      numFilters={0}
      onClick={[Function]}
      title="bar"
    />
  }
  closePopover={[Function]}
  data-test-subj="filter-popover_test"
  display="inlineBlock"
  hasArrow={true}
  id="test"
  isOpen={false}
  ownFocus={true}
  panelPaddingSize="m"
  withTitle={true}
  zIndex={10000}
>
  <EuiPopoverTitle>
    <EuiFieldSearch
      compressed={false}
      disabled={true}
      fullWidth={false}
      incremental={true}
      isClearable={true}
      isLoading={false}
      onSearch={[Function]}
      placeholder="Loading..."
    />
  </EuiPopoverTitle>
</EuiPopover>
`;

exports[`FilterPopover component renders without errors for valid props 1`] = `
<EuiPopover
  anchorPosition="downCenter"
  button={
    <UptimeFilterButton
      isSelected={true}
      numActiveFilters={2}
      numFilters={0}
      onClick={[Function]}
      title="bar"
    />
  }
  closePopover={[Function]}
  data-test-subj="filter-popover_test"
  display="inlineBlock"
  hasArrow={true}
  id="test"
  isOpen={false}
  ownFocus={true}
  panelPaddingSize="m"
  withTitle={true}
  zIndex={10000}
>
  <EuiPopoverTitle>
    <EuiFieldSearch
      compressed={false}
      disabled={true}
      fullWidth={false}
      incremental={true}
      isClearable={true}
      isLoading={false}
      onSearch={[Function]}
      placeholder="Search bar"
    />
  </EuiPopoverTitle>
</EuiPopover>
`;

exports[`FilterPopover component returns selected items on popover close 1`] = `
<div
  intl="[object Object]"
>
  <div
    id="foo"
  >
    Some text
  </div>
  <div
    class="euiPopover euiPopover--anchorDownCenter euiPopover--withTitle"
    data-test-subj="filter-popover_test"
    id="test"
  >
    <div
      class="euiPopover__anchor"
    >
      <button
        class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--iconRight euiFilterButton euiFilterButton-isSelected euiFilterButton-hasActiveFilters euiFilterButton-hasNotification euiFilterButton--hasIcon"
        type="button"
      >
        <span
          class="euiButtonEmpty__content"
        >
          <div
            aria-hidden="true"
            class="euiButtonEmpty__icon"
            data-euiicon-type="arrowDown"
          />
          <span
            class="euiButtonEmpty__text euiFilterButton__text-hasNotification"
          >
            <span
              class="euiFilterButton__textShift"
              data-text="bar"
              title="bar"
            >
              bar
            </span>
            <span
              aria-label="1 active filters"
              class="euiNotificationBadge euiNotificationBadge--medium euiFilterButton__notification"
            >
              1
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</div>
`;
